# CMAKE_CUDA_CXX_LINK_ERROR

./: CMakeLists.txt
apps/: CMakeLists.txt  apps1.cpp  apps1.cu
modules/: CMakeLists.txt
modules/func1/: CMakeLists.txt  func1.cu  func1.cuh
modules/func2/: CMakeLists.txt  func2.cu  func2.cuh
modules/func3/: CMakeLists.txt  func3.cu  func3.cuh
modules/func4/: CMakeLists.txt  func4.cu  func4.cuh
modules/utils/: CMakeLists.txt  check_cuda_error.h
